--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 
 .itemlist-box{
     width: 100%;
-    height: 1650px;
+    height: 100%;
 }
 
 .item{
@@ -42,7 +42,7 @@ body{
 
 .item2{
     width: 25%;
-    height: 100%;
+    height: 550px;
     background-color: aqua;
     border: solid 1px;
     position: relative;
@@ -50,10 +50,12 @@ body{
 
 .itemlist-img{
     width: 100%;
-    position: absolute;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 }
 
 .item-text{
