--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
 
 .itemlist ul{
     padding: 0;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
